--- a/categories/layout/index.html
+++ b/categories/layout/index.html
@@ -14,34 +14,34 @@
   
   <link rel="preconnect" href="https://fonts.gstatic.com">
   
-  <link rel="stylesheet" href="https://examplesite.com/plugins/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="https://vickycheng0606.github.io/plugins/bootstrap/bootstrap.min.css">
   
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&amp;display=swap">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   
-  <link rel="stylesheet" href="https://examplesite.com/plugins/hover/hover.css">
+  <link rel="stylesheet" href="https://vickycheng0606.github.io/plugins/hover/hover.css">
   
-  <link rel="stylesheet" href="https://examplesite.com/plugins/magnific-popup/magnific-popup.css">
+  <link rel="stylesheet" href="https://vickycheng0606.github.io/plugins/magnific-popup/magnific-popup.css">
   
-  <link rel="stylesheet" href="https://examplesite.com/plugins/owl-carousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="https://vickycheng0606.github.io/plugins/owl-carousel/owl.carousel.min.css">
   
-  <link rel="stylesheet" href="https://examplesite.com/plugins/owl-carousel/owl.theme.default.min.css">
+  <link rel="stylesheet" href="https://vickycheng0606.github.io/plugins/owl-carousel/owl.theme.default.min.css">
   
-  <link rel="stylesheet" href="https://examplesite.com/plugins/text-animation/text-animation.css">
+  <link rel="stylesheet" href="https://vickycheng0606.github.io/plugins/text-animation/text-animation.css">
   
 
   
   
-  <link rel="stylesheet" href="https://examplesite.com/css/style.min.css" media="screen">
+  <link rel="stylesheet" href="https://vickycheng0606.github.io/css/style.min.css" media="screen">
 
   
   
-  <link rel="stylesheet" href="https://examplesite.com/css/custom.min.css" media="screen">
+  <link rel="stylesheet" href="https://vickycheng0606.github.io/css/custom.min.css" media="screen">
 
   
-  <link rel="shortcut icon" href="https://examplesite.com/images/favicon.png" type="image/x-icon">
-  <link rel="icon" href="https://examplesite.com/images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://vickycheng0606.github.io/images/favicon.png" type="image/x-icon">
+  <link rel="icon" href="https://vickycheng0606.github.io/images/favicon.png" type="image/x-icon">
 
   
   
@@ -50,7 +50,7 @@
   <meta property="og:title" content="Layout" />
 <meta property="og:description" content="鄭瑜個人作品集網站" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://examplesite.com/categories/layout/" />
+<meta property="og:url" content="https://vickycheng0606.github.io/categories/layout/" />
 
 
   
@@ -63,11 +63,11 @@
       <ul class="desktop-menu list-inline mb-0 justify-content-end" id="desktop-menu">
         
         
-        <li class="menu-item menu-item-transparent dark hvr-underline-from-left 1"><a href="https://examplesite.com/">Home</a></li>
+        <li class="menu-item menu-item-transparent dark hvr-underline-from-left 1"><a href="https://vickycheng0606.github.io/">Home</a></li>
         
-        <li class="menu-item menu-item-transparent dark hvr-underline-from-left 1"><a href="https://examplesite.com#about">About me</a></li>
+        <li class="menu-item menu-item-transparent dark hvr-underline-from-left 1"><a href="https://vickycheng0606.github.io#about">About me</a></li>
         
-        <li class="menu-item menu-item-transparent dark hvr-underline-from-left 1"><a href="https://examplesite.com#portfolio">Portfolio</a></li>
+        <li class="menu-item menu-item-transparent dark hvr-underline-from-left 1"><a href="https://vickycheng0606.github.io#portfolio">Portfolio</a></li>
         
       </ul>
       
@@ -87,11 +87,11 @@
           <nav>
             <ul class="mobile-menu-list">
               
-              <li class="hvr-shutter-out-vertical mobile-menu-item 1"><a href="https://examplesite.com/">Home</a></li>
+              <li class="hvr-shutter-out-vertical mobile-menu-item 1"><a href="https://vickycheng0606.github.io/">Home</a></li>
               
-              <li class="hvr-shutter-out-vertical mobile-menu-item 1"><a href="https://examplesite.com#about">About me</a></li>
+              <li class="hvr-shutter-out-vertical mobile-menu-item 1"><a href="https://vickycheng0606.github.io#about">About me</a></li>
               
-              <li class="hvr-shutter-out-vertical mobile-menu-item 1"><a href="https://examplesite.com#portfolio">Portfolio</a></li>
+              <li class="hvr-shutter-out-vertical mobile-menu-item 1"><a href="https://vickycheng0606.github.io#portfolio">Portfolio</a></li>
               
             </ul>
             
@@ -123,10 +123,10 @@
       
       <div class="col-lg-4 col-sm-6 mb-4">
         <div class="card">
-           <a class="card-img-wrapper" href="https://examplesite.com/portfolio/project-18/"><img
-              src="https://examplesite.com/images/portfolio/item18.jpg" alt="多扶事業小冊子" class="card-img-top"></a> 
+           <a class="card-img-wrapper" href="https://vickycheng0606.github.io/portfolio/project-18/"><img
+              src="https://vickycheng0606.github.io/images/portfolio/item18.jpg" alt="多扶事業小冊子" class="card-img-top"></a> 
           <div class="card-body">
-            <h4 class="mb-2"><a class="card-title" href="https://examplesite.com/portfolio/project-18/">多扶事業小冊子</a></h4>
+            <h4 class="mb-2"><a class="card-title" href="https://vickycheng0606.github.io/portfolio/project-18/">多扶事業小冊子</a></h4>
             <p class="card-text">小冊子用途為介紹多扶事業所提供的服務，包括銀髮、身障者出團旅遊；輔具租借、購買；多扶專車接送等服務。</p>
           </div>
         </div>
@@ -169,26 +169,26 @@
   </div>
 </footer><!-- JS Plugins -->
 
-<script src="https://examplesite.com/plugins/jQuery/jquery.min.js"></script>
+<script src="https://vickycheng0606.github.io/plugins/jQuery/jquery.min.js"></script>
 
-<script src="https://examplesite.com/plugins/bootstrap/bootstrap.min.js"></script>
+<script src="https://vickycheng0606.github.io/plugins/bootstrap/bootstrap.min.js"></script>
 
-<script src="https://examplesite.com/plugins/wow.min.js"></script>
+<script src="https://vickycheng0606.github.io/plugins/wow.min.js"></script>
 
-<script src="https://examplesite.com/plugins/text-animation/text-animation.js"></script>
+<script src="https://vickycheng0606.github.io/plugins/text-animation/text-animation.js"></script>
 
-<script src="https://examplesite.com/plugins/jquery.waypoints.min.js"></script>
+<script src="https://vickycheng0606.github.io/plugins/jquery.waypoints.min.js"></script>
 
-<script src="https://examplesite.com/plugins/shuffle/shuffle.min.js"></script>
+<script src="https://vickycheng0606.github.io/plugins/shuffle/shuffle.min.js"></script>
 
-<script src="https://examplesite.com/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="https://vickycheng0606.github.io/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-<script src="https://examplesite.com/plugins/owl-carousel/owl.carousel.min.js"></script>
+<script src="https://vickycheng0606.github.io/plugins/owl-carousel/owl.carousel.min.js"></script>
 
 
 <!-- Main Script -->
 
-<script src="https://examplesite.com/js/script.min.js"></script>
+<script src="https://vickycheng0606.github.io/js/script.min.js"></script>
 
 <!-- google analitycs -->
 </body>
