--- a/categories/layout/index.html
+++ b/categories/layout/index.html
@@ -127,8 +127,8 @@
               src="https://vickycheng0606.github.io/images/portfolio/item34.jpg" alt="Dailyposter 每日設計" class="card-img-top"></a> 
           <div class="card-body">
             <h4 class="mb-2"><a class="card-title" href="https://vickycheng0606.github.io/portfolio/project-33/">Dailyposter 每日設計</a></h4>
-            <p class="card-text">從2021.8月開始挑戰每日海報設計，並於2021.11月底完成100張的目標，目前仍持續進行2-3天一次的創作。 My Daily Poster IG +
-當時對自己的設計感受不到突破，所以開始了這樣的挑戰，讓自己可以多嘗試一些沒做過的風格。 做每日海報對我而言最困難的是持之以恆，因此成功完成100張對自己來說是莫大鼓勵，目前仍持續進行這樣的練習。 </p>
+            <p class="card-text">從2021.8月開始挑戰每日海報設計，並於2021.11月完成100張的目標。 My Daily Poster IG +
+當時對自己的設計感受不到突破，所以開始了這樣的挑戰，讓自己可以多嘗試一些沒做過的風格。 我認為做每日海報對最困難的是持之以恆，因此成功完成100張對自己來說是莫大鼓勵。 </p>
           </div>
         </div>
       </div>
